<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pules Watch</string>
    <string name="app_version">version</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_step_goal">StepGoalActivity</string>
    <string name="title_activity_setting_heart_rate_set">SettingHeartRateSetActivity</string>
    <string name="title_activity_setting_sleep_time_set">SettingSleepTimeSetActivity</string>
    <string name="title_activity_setting_clock_set">SettingClockSetActivity</string>
    <string name="title_activity_camera_and_search">CameraAndSearchActivity</string>
    <string name="title_activity_setting_auto_heart_rate">SettingAutoHeartRateActivity</string>
    <string name="title_activity_setting_binded_device">SettingBindedDeviceActivity</string>
    <string name="title_activity_setting_phone_incoming">SettingPhoneIncomingActivity</string>
    <string name="title_activity_message_incming">MessageIncmingActivity</string>
    <string name="title_activity_setting_remind">SettingRemindActivity</string>
    <string name="title_activity_setting_remind_type_set">SettingRemindTypeSetActivity</string>
    <string name="title_activity_setting_disconnect">SettingDisconnectActivity</string>
    <string name="title_activity_introduce_app">IntroduceAppActivity</string>

    <!-- MainActivity -->
    <string name="main_tab_my">My</string>
    <string name="main_tab_data">Data</string>
    <string name="main_tab_setting">Setting</string>
    <!-- SettingAutoHeartRateActivity -->
    <string name="auto_hr_detection">Auto Heartbeat Detection</string>
    <string name="auto_hr_info">Dear,once this function be opened,the watch will atuomatically test heart rate within the given time.</string>
    <string name="connected_watch">Connected Watch</string>
    <string name="device_none">None</string>
    <string name="other_watch">Other Wather</string>
    <string name="binding_equipment">Binding Equipment</string>
    <!-- settingClockSetActivity -->
    <string name="watch_alarm">Watch Alarm</string>
    <string name="alarm_time">Alarm time</string>
    <string name="alarm_info">Dear,once the alarm clock setting is completed,the connected watch will have specified time corresponding hint according to the your setting.</string>
    <!-- SettingHeartRateSetActivity -->
    <string name="allow_the_maximum_heart">Maximum heart</string>
    <string name="bpm">/bpm</string>
    <string name="max_hr_info">Dear,the maximum heart rate can only be between 40 and 200.Once the maximum heart setting is completeed,it will be synchrinized to watch.</string>
    <string name="max_heart">Maximum Heartbeat</string>
    <!-- SettingPhoneIncomingActivity -->
    <string name="call_msg_reminder">Call/Message reminder</string>
    <string name="incoming_info">Dear,once this function be opened,the connected watch will have corresponding hint when you get an incoming call or message.</string>
    <!-- SettingSleepTimeSetActivity -->
    <string name="siesta_time_set">Siesta time set</string>
    <string name="siesta_start">Siesta start</string>
    <string name="siesta_over">Siesta over</string>
    <string name="sleep_time_set">Sleep time set</string>
    <string name="sleep_start">Sleep start</string>
    <string name="sleep_over">Sleep over</string>
    <string name="sleep_info">Dear,because of the convenience of the rest data systematically,please don\'t set the overlap of time to rest.</string>
    <string name="sleep">Sleep</string>
    <!-- SettingStepGoalActivity -->
    
      <string name="sport_info_low">Appraise for sport : Low</string>
        <string name="sport_info_nomal">Appraise for sport : Normal</string>
        <string name="sport_info_high">Appraise for sport : High</string>
        
     <string name="high_step_info">Max:99990</string>
    <string name="low_step_info">Min:500</string>
    <string name="target_step">Target step</string>
    <string name="target_step_title">Target Step</string>
    <string name="exercise_evaluation">Exercise_evaluation:</string>
    <string name="step">step</string>
    <string name="step_info">Dear,the target steps are limited to between 500 and 99990.Once the targetsteps setting is completed,it will be synchronized to watch and watch began to step.</string>
    <string name="gold_step">The target number : </string>
    <string name="unbinding_model">Random Patterns</string>
    <string name="complete_step">Complete : </string>
      <string name="sleep_tips"> Sleep : </string>
     <string name="siesta_tips">Siesta : </string>
     <string name="nap_tips">Nap : </string>
     
        <string name="low">Low</string>
    <string name="nomal">Normal</string>
    <string name="high">High</string>
    <string name="sport">Sport</string>
        <string name="hr_value">Current Heart Rate : </string> 
        
           <string name="sleep_eval">Sleep evaluation : </string>
    <string name="siesta_eval">Siesta evaluation : </string>
    <string name="nap_eval">Nap evaluation : </string>
    
    <string name="eval_sleep_leak">Lack of sleep</string>
    <string name="eval_sleep_normal">Normal</string>
    <string name="eval_sleep_high">Busy</string>

    <!-- InformationFragment -->
    <string name="info_step">Step</string>
    <string name="info_distance">Distance</string>
    <string name="info_cal">Consume</string>
    <string name="info_heart">Heart Rate</string>
    <string name="siesta">Siesta</string>
    <string name="nap">Nap</string>
    <string name="target_distance">Target distance : </string>
  <string name="complete_distance">Complete : </string>
      <string name="target_cal">Target : </string>
          <string name="complete_cal">Consumed : </string>
           <string name="hour">hours</string> 
          
    <!-- SettingFragment -->
             <string name="open_blue_ing">Bluetooth is opening.</string>
        <string name="sync_ok">Sync complete</string>
      <string name="confirm">Confirm</string>
       <string name="confirm_exit">Exit?</string>
      <string name="disconnect">Disconnect</string>
        <string name="off">Off</string>
    <string name="on">On</string>
        <string name="disconnect_device">Disconnect device</string>
    <string name="setting">Setting</string>
    <string name="sync_data">Sync Data</string>
    <string name="sync_time">Sync time</string>
    <string name="introduce">Version</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="goal_step">The target number:</string>
    <string name="title_activity_heart_rate_count">HeartRateCountActivity</string>
    <string name="count">Data</string>
    <string name="day_count">Day</string>
    <string name="month_count">Month</string>
    <string name="count_step">Step Count</string>
    <string name="count_step_info">Maximum 306.9690 (million)</string>
    <string name="count_sleep">Sleep statistics</string>
    <string name="count_sleep_info">Maximum 744 (hours)</string>
    <string name="count_step_info_day">Maximum 20000 (step)</string>
    <string name="count_sleep_info_day">Maximum 24 (hours)</string>
    <string name="count_hr">Heart rate statistics</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="reset">Reset</string>
    <string name="unit_bpm">(unit) Bpm</string>
    
    <string name="no_data">No Data</string>
             <string name="open_blue">Enable Bluetooth?</string>
    
	<!-- settingBindedDEVICEACTIVITY -->
             <string name="contact_binding">Contact binding?</string>
                       <string name="no_device_binding">No device binding</string>
                         <string name="no_binded">No Binding</string>
                         <string name="binded">Binding equipment.</string>
                                  <string name="device_not_match">Connected devices do not match</string>
                                     <string name="connect_disconnect">Connect disconnect</string>
                      <string name="being_connected">Being connected</string>
	
</resources>