<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     android:scrollbars="none"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
           android:background="@color/grey_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_reduce_step_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/selector_btn_decrease_date" />
         <TextView
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:id="@+id/tv_step_now_month"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/selector_bg_count_now"
            android:gravity="center"
                         android:clickable="true"
            android:text="@string/count_step"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_increase_step_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/selector_btn_increase_date" />
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_step_info"
            android:textSize="14sp" />

        <com.mycj.healthy.view.StepMonthView
            android:id="@+id/step_month"
            android:layout_width="match_parent"
            android:layout_height="160dp" />
   

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
           android:background="@color/grey_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_reduce_sleep_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/selector_btn_decrease_date" />
         <TextView
                 android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
                     android:id="@+id/tv_sleep_now_month"
            android:layout_width="wrap_content"
                         android:clickable="true"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/count_sleep"
               android:background="@drawable/selector_bg_count_now"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_increase_sleep_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/selector_btn_increase_date" />
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_sleep_info"
            android:textSize="14sp" />

        <com.mycj.healthy.view.SleepMonthView
                      android:id="@+id/sleep_month"
            android:layout_width="match_parent"
            android:layout_height="160dp" />
        
    </LinearLayout>

</ScrollView>