<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_title"
        layout="@layout/top_title" >
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/target_step"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/selector_bg_checkbox"
            android:checked="false"
            android:clickable="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/grey_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingTop="12dp" >

        <TextView
            android:id="@+id/tv_info_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/exercise_evaluation"
            android:textSize="20sp" />

        <com.mycj.healthy.view.ColorSeekBar
            android:id="@+id/sk_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/setting_walk_goal_appraisal_background"
            android:maxWidth="480dp"
            android:minWidth="480dp"
            android:progressDrawable="@null"
            android:thumb="@drawable/setting_walk_goal_appraisal_coordinate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_walkman" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/ed_step"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:background="@drawable/bg_edit"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="999"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/step"
                        android:textSize="18sp" />
                </LinearLayout>

                <!--
                     <com.mycj.healthy.view.StepSeekBar
                    android:id="@+id/sb_step"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:maxHeight="20dip"
                    android:minHeight="20dip"
                    android:progressDrawable="@drawable/bg_seekbar"
                    android:thumb="@drawable/setting_rail_on_button"
                    android:thumbOffset="0dp" />
                -->

                <SeekBar
                    android:id="@+id/sb_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/bg_seekbar"
                    android:thumb="@drawable/setting_rail_on_button"
                    android:thumbOffset="0dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/grey_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:text="@string/step_info"
        android:textSize="14sp" />

</LinearLayout>