<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/top_title"
        layout="@layout/top_title" >
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/watch_alarm"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/selector_bg_checkbox"
            android:checked="false"
            android:clickable="true" />
    </RelativeLayout>

<View
        android:layout_width="match_parent"
        android:background="@color/grey_bg"
        android:layout_height="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/alarm_time"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <NumberPicker
                android:divider="@null"
                android:id="@+id/np_clock_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text=":"
                android:textSize="16sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/np_clock_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/grey_bg"
        android:layout_height="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/alarm_info"
        android:textSize="14sp" />

</LinearLayout>