<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    tools:context="${packageName}.${activityClass}" >

    <RadioGroup
        android:id="@+id/rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >
	
        <RelativeLayout
            android:id="@+id/rl_infomation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
              android:background="@drawable/selector_bg_bottom_tab"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/tv_infomation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/main_tab_my"
                android:textColor="@color/grey_light"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_infomation"
                style="@style/AppBaseTheme"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@id/tv_infomation"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:background="@drawable/my_state_button"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

       

      

        <RelativeLayout
                   android:clickable="true"
              android:background="@drawable/selector_bg_bottom_tab"
            android:id="@+id/rl_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/main_tab_data"
                android:textColor="@color/grey_light"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_count"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@id/tv_count"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:background="@drawable/statistics_button"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
                   android:clickable="true"
              android:background="@drawable/selector_bg_bottom_tab"
            android:id="@+id/rl_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/main_tab_setting"
                android:textColor="@color/grey_light"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_above="@id/tv_setting"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:background="@drawable/setting_button"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
    </RadioGroup>
	<View  android:layout_width="match_parent"
		    android:layout_height="1px"
		    android:background="#000"
		     android:layout_above="@id/rg_bottom"
		    />
    <android.support.v4.view.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_bottom" />

</RelativeLayout>